--- a/TableEditor/Views/WorkWindow.xaml
+++ b/TableEditor/Views/WorkWindow.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:TableEditor"
+        xmlns:local="clr-namespace:TableEditor.VM"
         mc:Ignorable="d"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         Height="735" Width="1280"
@@ -14,8 +14,6 @@
     <Window.DataContext>
         <local:WorkWindowViewModel/>
     </Window.DataContext>
-    
-
 
     <Grid x:Name="BaseGrid">
         <Grid.RowDefinitions>
@@ -43,12 +41,24 @@
 
                 <StackPanel x:Name="lastTableList" Margin="50 50 50 50">
                     <Label Content="Последние таблицы:" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="White" FontFamily="Consolas" FontSize="15"/>
-                    <Label x:Name="undefinedTableOnClient" Content="1.Последних таблиц не найдено" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="Gray" FontFamily="Consolas" FontSize="15"/>
+                    <ListBox>
+                        <ListBox.ItemTemplate>
+                            <DataTemplate>
+                                <Button Content="{Binding Path = Header}"/>
+                            </DataTemplate>
+                        </ListBox.ItemTemplate>
+                    </ListBox>
                 </StackPanel>
 
                 <StackPanel x:Name="tutorials" Margin="52,50,53,50" Grid.Column="1">
-                    <Label Content="Уроки по этой таблице:" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="White" FontFamily="Consolas" FontSize="15"/>
-                    <Label x:Name="undefinedTutorials" Content="1.Уроков не найдено" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="Gray" FontFamily="Consolas" FontSize="15"/>
+                    <Label Content="Туториалы:" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="White" FontFamily="Consolas" FontSize="15"/>
+                    <ListBox>
+                        <ListBox.ItemTemplate>
+                            <DataTemplate>
+                                <Button Content="{Binding Path = TytorialHeader}"/>
+                            </DataTemplate>
+                        </ListBox.ItemTemplate>
+                    </ListBox>
                 </StackPanel>
 
             </Grid>
@@ -61,17 +71,29 @@
                 <RowDefinition Height="620*"/>
             </Grid.RowDefinitions>
 
-            <Border x:Name="TableWorkFlowToolsBody" Background="#FF2B2B2B">
-                <StackPanel HorizontalAlignment="Left">
-                    
+            <Border x:Name="TableWorkFlowToolsBody" Background="#FF2B2B2B" Padding="5" Margin="5 5 5 5" CornerRadius="5">
+                <StackPanel HorizontalAlignment="Left" CanHorizontallyScroll="True" Orientation="Horizontal" >
+                    <Button Command="{Binding AddColumnCommand}" Content="+ col" Margin="5"/>
+                    <Button Command="{Binding AddRowCommand}" Content="+ row" Margin="5"/>
+                    <Button Command="{Binding RemoveColumnCommand}" Content="- col" Margin="5"/>
+                    <Button Command="{Binding RemoveRowCommand}" Content="- row" Margin="5"/>
 
                 </StackPanel>
             </Border>
 
-            <TabControl ItemsSource="{Binding TableListControl, Mode=TwoWay}" x:Name="DataGridTabControll" Grid.Row="1" TabStripPlacement="Right" Style="{DynamicResource MaterialDesignTabControl}">
-                
+            <TabControl ItemsSource="{Binding DataTables, Mode=TwoWay}" x:Uid="DataGridTabControll" Grid.Row="1" TabStripPlacement="Right" Style="{DynamicResource MaterialDesignTabControl}" SelectedIndex="{Binding SelectTableNumber}" Margin="5">
+                <TabControl.ItemTemplate>
+                    <DataTemplate>
+                        <TextBlock Text="{Binding Path=Header, UpdateSourceTrigger=PropertyChanged}" Foreground="WhiteSmoke" HorizontalAlignment="Left"/>
+                    </DataTemplate>
+                </TabControl.ItemTemplate>
+                <TabControl.ContentTemplate>
+                    <DataTemplate>
+                        <DataGrid ItemsSource="{Binding Path = Data , Mode=TwoWay}" SelectionMode="Single" GridLinesVisibility="All" MinColumnWidth="80"/>
+                    </DataTemplate>
+                </TabControl.ContentTemplate>
             </TabControl>
-            
+
         </Grid>
 
         <Border x:Name="FuncFieldBody" Visibility="Visible" Background="#252526" Grid.Column="1" RenderTransformOrigin="0,0.5" HorizontalAlignment="Left" Width="0" Grid.RowSpan="2">
@@ -89,7 +111,8 @@
 
                 <StackPanel  x:Name="TableList" Visibility="Visible">
                     <Label Content="Таблицы" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top" Foreground="#FFFFFF" FontFamily="Consolas" FontSize="15"/>
-                    <Button Command="{Binding CreateTableCommand}" Content="Create table" Click="BCreateTable" />
+                    <TextBox materialDesign:HintAssist.Hint="Название таблицы" Foreground="WhiteSmoke" HorizontalAlignment="Center" Text="{Binding TableName, Mode=TwoWay}" Margin="5 5 5 5" Width="230"/>
+                    <Button Command="{Binding CreateTableCommand}" CommandParameter="{Binding }" Content="Create table" Click="BCreateTable" Background="#FF2F2F31" BorderBrush="#FF252526" Cursor="Hand"/>
                 </StackPanel>
 
 
@@ -98,7 +121,10 @@
                 </StackPanel>
 
             </Grid>
+            <!--LEFT FIELD-->
+
         </Border>
+        <!--LEFT SOME FIELD -->
 
         <Border Background="#333333" Grid.RowSpan="2">
 
@@ -138,8 +164,7 @@
             </Border.Effect>
 
             <StackPanel Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center">
-                <Label x:Name="userNickname" Content="{Binding Username}" FontSize="15" FontFamily="Consolas" Height="25"/>
-                <Label x:Name="status_bar" Content="status__bar" FontSize="15" FontFamily="Consolas" Height="26" Margin="100 0 0 0"/>
+                <Label x:Name="userNickname" Content="{Binding Path=UserName}" FontSize="15" FontFamily="Consolas" Height="25"/>
             </StackPanel>
 
         </Border>
